# cellatria

./: .gitignore  Dockerfile  bugfix.Dockerfile  pyproject.toml
cellexpress/: control.py  helper.py  qcfilter.py  stndrd_analysis.py
cellexpress/config/: config_Lai.json  config_Lai_GCP.json
